@@ -977,6 +977,16 @@ verilog/parser_sv.v:404: COMMENT  '/*parameter*/'
 verilog/parser_sv.v:404: VAR  'parameter' 'DW' 'module' '' 'int unsigned' '' '32'
 verilog/parser_sv.v:404: PORT  'DW' 'module' '' 'int unsigned' '' '1'
 verilog/parser_sv.v:405: ENDMODULE  'endmodule'
+verilog/parser_sv.v:406: INTERFACE  'interface' 'test_if'
+verilog/parser_sv.v:406: VAR  'port' 'clk' 'interface' '' '' '' ''
+verilog/parser_sv.v:406: PORT  'clk' 'interface' 'input' '' '' '1'
+verilog/parser_sv.v:407: ENDINTERFACE  'endinterface'
+verilog/parser_sv.v:409: MODULE  'module' 'bug815' undef '0'
+verilog/parser_sv.v:410: VAR  'port' 'bad' 'module' '' 'test_if' '[2]' ''
+verilog/parser_sv.v:410: PORT  'bad' 'module' 'interface' 'test_if' '[2]' '1'
+verilog/parser_sv.v:410: INSTANT  'test_if' 'bad' '[2]'
+verilog/parser_sv.v:410: ENDCELL  ''
+verilog/parser_sv.v:411: ENDMODULE  'endmodule'
 verilog/parser_sv09.v:001: COMMENT  '// 1800-2009 mantis1769'
 verilog/parser_sv09.v:002: MODULE  'module' 'mantis1769' undef '0'
 verilog/parser_sv09.v:002: VAR  'parameter' 'N' 'module' '' '' '' '1'
